--- a/book.css
+++ b/book.css
@@ -63,6 +63,7 @@ body{
   width: 100%;
   height: 100%;
   display: flex;
+  perspective: 250rem;
 }
 
 .book .book-page{
@@ -166,9 +167,14 @@ body{
 .book-page.page-right{
   position: absolute;
   right: 0;
-  transform: preserve-3d;
+  transform-style: preserve-3d;
+  transform-origin: left;
+  transition: transform 1s cubic-bezier(.645, .045, .355, 1);
 }
 
+.book-page.page-right.turn{
+  transform: rotateY(-180deg);
+}
 .book-page .page-front,
 .book-page .page-back {
   position: absolute;
@@ -223,4 +229,243 @@ body{
 
 .workeduc-content .year i{
   margin-right: .4rem;
+}
+
+.number-page{
+  position: absolute;
+  bottom: 1.2rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.nextprev-btn{
+  position: absolute;
+  bottom: .9rem;
+  right: 1.9rem;
+  width: 2rem;
+  height: 2rem;
+  /* background: seagreen; */
+  cursor: pointer;
+  font-size: 2rem;
+  color: var(--second-text-color);
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+  transition: .5s;
+}
+.nextprev-btn:hover{
+  color: var(--main-color);
+  
+}
+.nextprev-btn.back{
+  left: 1.5rem;
+}
+
+.services-box{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+.services-box .services-content{
+  flex: 1 1 10rem;
+  border: var(--border);
+  border-radius: .5rem;
+  padding: .8rem .5rem 1.1rem;
+  text-align: center;
+  transition: .3s ease;
+}
+
+.services-box .services-content:hover{
+  box-shadow: var(--box-shadow);
+  
+  
+}
+.services-content i{
+  font-size: 2.5rem;
+  color: var(--main-color);
+  
+}
+
+.services-content h3{
+  font-size: 1.1rem;
+
+}
+.services-content p{
+  margin: .2rem 0 .8rem;
+}
+
+.services-content .btn{
+  width: 8rem;
+  height: 2.5rem;
+}
+
+.skills-box{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.5rem;
+}
+
+.skills-box .skills-content{
+  /*background: red;*/
+  flex: 1 1 20rem;
+}
+
+.skills-content h3{
+  font-size: 1.3rem;
+  line-height: 1;
+  margin-bottom: .6rem;
+}
+
+.skills-content .content{
+  display: flex;
+  flex-wrap: wrap;
+  gap: .8rem;
+}
+
+.skills-box .content span{
+  display: inline-flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 6rem;
+  height: 5rem;
+  border: var(--border);
+  border-radius: .3rem;
+  font-weight: 600;
+  transition: .3s ease;
+}
+
+.skills-box .content span:hover{
+  box-shadow: var(--box-shadow);
+  
+}
+.skills-box .content span i{
+  font-size: 2.5rem;
+  color: var(--main-color);
+}
+
+.portfolio-box .img-box{
+  display: flex;
+  width: 100%;
+  height: 15rem;
+  /*background: red;*/
+  border: var(--border);
+  border-radius: .5rem;
+  overflow: hidden;
+}
+
+.portfolio-box .img-box img{
+
+  width: 100%;
+  object-fit: cover;
+  transition: .5s ease;
+} 
+
+.portfolio-box .img-box img:hover{
+  transform: scale(1.1);
+  
+}
+
+.portfolio-box .info-box{
+  /*background: red;*/
+  margin: 1rem 0 1.5rem;
+}
+.portfolio-box .info-box .info-title{
+  /* background: seagreen; */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1rem;
+}
+.portfolio-box .info-box .info-title h3{
+  font-size: 1.51rem;
+  
+}
+.portfolio-box .info-box .info-title a{
+  /* background: red; */
+  display: flex;
+  align-items: center;
+  color: var(--main-color);
+}
+
+.portfolio-box .info-box .info-title a i{
+  font-size: 1.5rem;
+  margin-left: .3rem;
+}
+
+.portfolio-box .info-box p:nth-of-type(1){
+  font-weight: 600;
+}
+.portfolio-box .btn-box{
+  /* background: red; */
+  display: flex;
+  justify-content: center;
+}
+.portfolio-box .btn-box .btn{
+  margin: 0 1.15rem;
+}
+.contact-box{
+  text-align: center;
+}
+.contact-box .field{
+  width: 100%;
+  border: var(--border);
+  background: transparent;
+  border-radius: .3rem;
+  padding: .8rem;
+  font-size: 1rem;
+  color: var(--text-color);
+  margin-bottom: 1.5rem;
+
+}
+
+.contact-box .field::placeholder{
+  color: var(--second-text-color);
+}
+
+.contact-box textarea{
+  height: 15rem;
+  resize: none;
+}
+
+.contact-box .btn{
+  cursor: pointer;
+}
+
+.back-profile{
+  position: absolute;
+  bottom: 1.2rem;
+  right: 2rem;
+  width: 2rem;
+  height: 2rem;
+  background: transparent;
+  border: var(--border);
+  border-radius: .3rem;
+  display: inline-flex;
+  color: var(--main-color);
+  justify-content: center;
+  align-items: center;
+  font-size: 1.1rem;
+  transition: .5s ease;
+}
+
+.back-profile:hover{
+  background: var(--main-color);
+  color: var(--white);
+  
+}
+.back-profile p{
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) scale(.5);
+  font-size: 1rem;
+  opacity: 0;
+  color: var(--main-color);
+  transition: .5s ease;
+}
+.back-profile:hover p{
+  opacity: 1;
+  transform: translateX(-50%) scale(1);
+  top: -1.8rem;
 }
